# FAST-RV

./: LICENSE  README.md  fast_rv.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: 51_peg.ipynb  HD 9826.ipynb  HD45364.ipynb
src/: fast_rv.py
tests/: test_basic.py
