[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-rv"
version = "0.1.0"
description = "A lightweight toolkit for first-order single-planet radial velocity fitting"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jebraan Jamil", email = "jebraanjamil@gmail.com" }
]
keywords = ["astronomy", "exoplanets", "radial-velocity", "keplerian-fit", "vizier"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "astropy",
  "astroquery",
  "pyastronomy"
]

[project.urls]
Homepage = "https://github.com/proxima786/FAST-RV"
Repository = "https://github.com/proxima786/FAST-RV"
Issues = "https://github.com/proxima786/FAST-RV/issues"

[tool.setuptools.packages.find]
where = ["src"]
